--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Client_GitHub</string>
+    <string name="app_name">PngConverter</string>
+    <string name="start_conversion">Start conversion</string>
 </resources>
